[Qt] Implement ChromeClient::windowResizerRect()

Reviewed by Simon Hausmann.

https://bugs.webkit.org/show_bug.cgi?id=21300

We assume the resize corner to be in the lower right corner of
the window and having the width and height of the scrollbars.

The helper function geometryRelativeToOwnerWidget() in the page
client is used to clip the resize rect to the actual size of the
viewport, not the size of the QGraphicsView.

Canonical link: https://commits.webkit.org/47846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56552 268f45cc-cd09-0410-ab3c-d52691b4dbfc